--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Avatar MVP</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/rasa-webchat@1.x.x/lib/index.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting to Avatar Creation</title>
+    <meta http-equiv="refresh" content="0;url=avatar-creator/survey.html">
 </head>
 <body>
-  <h1>Hello, this is my AI Avatar project!</h1>
-  <div id="tone-selector">
-    <label for="tone">Choose a tone:</label>
-    <select id="tone">
-      <option value="casual">Casual</option>
-      <option value="formal">Formal</option>
-      <option value="friendly">Friendly</option>
-    </select>
-  </div>
-  <div id="chat-container">
-    <div id="webchat"></div>
-  </div>
-  <script src="script.js"></script>
+    <p>Redirecting to the Avatar Creation Survey...</p>
+    <p>If you are not redirected, <a href="avatar-creator/survey.html">click here</a>.</p>
 </body>
 </html>
