--- a/avatar-creator/survey.html
+++ b/avatar-creator/survey.html
@@ -32,6 +32,7 @@
         <input type="text" id="instagram" name="instagram" placeholder="E.g., https://instagram.com/yourprofile">
         <button type="submit">Create Avatar</button>
     </form>
+    <p><a href="avatar-meeting.html">View Avatar Meeting Place</a></p>
 
     <script>
         function submitForm(event) {
